# mcp-icd10

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
src/mcp_icd10/: __init__.py  db.py  server.py
tests/: test_benchmark.py
